# Robocon2026_r2

./: .gitignore  AGENTS.md  Dockerfile  README.md  run_r2_base_docker.sh
.codex/: config.toml
2026R2_ws/src/joystick_driver/: README.md  package.xml  setup.cfg  setup.py
2026R2_ws/src/joystick_driver/joystick_driver/: joystick_publisher_node.py
2026R2_ws/src/joystick_msgs/: CMakeLists.txt  README.md  package.xml
2026R2_ws/src/joystick_msgs/msg/: Joystick.msg
2026R2_ws/src/r2_launch/: README.md  package.xml  setup.cfg  setup.py
2026R2_ws/src/r2_launch/launch/: launch.py
2026R2_ws/src/r2_launch/scripts/: setup_can0.sh
