<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>joystick_driver</name>
  <version>0.1.0</version>
  <description>ROS 2 package to publish joystick inputs using evdev.</description>
  <maintainer email="yanczhang8@gmail.com">Steven Zhang</maintainer>
  <license>Apache License 2.0</license> <!-- Or your preferred license -->

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>joystick_msgs</depend>
  <depend>evdev</depend>
  <!-- Dependency on your custom message package -->

  <!-- python3-evdev is a system dependency, not a ROS one.
       You can't list it as a <depend> here for rosdep to install directly
       unless you create a rosdep rule for it. For now, ensure it's manually installed.
       If you were releasing this package, you'd add a rosdep key.
  -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

